# tkd_generator

./: CMakeLists.txt  README.md  common_typedefs.h  coordinates.h  domain_generator.cpp  domain_generator.h  generator.cpp  generator.h  geometric_helper.cpp  geometric_helper.h  geometry_generator.cpp  geometry_generator.h  packages.json  plugin_main.cpp  rotation_matrix.cpp  rotation_matrix.h  sample_plugin.cpp  tetrakaidecahedron_generator.cpp  tetrakaidecahedron_generator.h
doc/: tkd-demo.lua
src/: common_typedefs.h  coordinates.cpp  coordinates.h  domain_generator.cpp  domain_generator.h  geometry_generator.cpp  geometry_generator.h
src/util/: geometric_helper.cpp  geometric_helper.h  rotation_matrix.cpp  rotation_matrix.h  vecComparator.h  volume_calculation.cpp  volume_calculation.h
test/: nucleus3d_10-24.495-30-8.000_1x1x1.ugx  testHelper.h  testLipidDistance.cpp  testSuite.cpp  testVolume.cpp  testVolumeOrientation.cpp  validateSwellResults.cpp  validateSwellResults.h
util/: VTKOutputGrid.cpp  VTKOutputGrid.h  geometric_helper.cpp  geometric_helper.h  plane_plane_intersection.h  rotation_matrix.cpp  rotation_matrix.h  vecComparator.cpp  vecComparator.h  volume_calculation.cpp  volume_calculation.h
